2007-06-20  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Initial implementation. It is missing some features and has some bugs but some trivial cases work.
	* ColumnDefinitionCollection.cs, RowDefinitionCollection.cs: Added.	

2007-06-19  George Giolfan  <georgegiolfan@yahoo.com>

	* TabItem.cs: Fixed arrangement when IsSelected changes.

2007-06-19  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Added.

2007-06-18  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs, TabItem.cs: More fixes.

2007-06-17  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs, TabItem.cs: Improved (the TabControl sample is displayed correctly now).

2007-06-15  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs, TabItem.cs: Partially implemented.

2007-06-14  George Giolfan  <georgegiolfan@yahoo.com>

	* Panel.cs: Some changes to support IsItemsHost (incomplete).

2007-06-13  George Giolfan  <georgegiolfan@yahoo.com>

	* Button.cs: Changed the way the theme style is changed when the Button is in a ToolBar.

2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>

	* TabItem.cs: Implemented OnCreateAutomationPeer, OnSelected, OnUnselected.

2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>

	* WrapPanel.cs: Fixed ArrangeOverride.

2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>

	* TabItem.cs: Made it load the theme.

2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>

	* TabItem.cs: Added.

2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>

	* WrapPanel.cs: Fixed MeasureOverride.

2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>

	* WrapPanel.cs: Implemented ArrangeOverride, MeasureOverride.

2007-06-10  George Giolfan  <georgegiolfan@yahoo.com>

	* DockPanel.cs: Added call to InvalidateArrange on Dock property change.

2007-06-10  George Giolfan  <georgegiolfan@yahoo.com>

	* Canvas.cs: Fixed ArrangeOverride.

2007-06-09  George Giolfan  <georgegiolfan@yahoo.com>

	* WrapPanel.cs: Added.
